--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -49,7 +49,7 @@ Dashboard As screen:
     txt_SearchLargeData As text:
         BorderColor: =RGBA(237, 237, 237, 1)
         Color: =RGBA(241, 244, 249, 1)
-        Default: =""
+        Default: =
         Height: =57
         HintText: ="Search"
         PaddingLeft: =40
