--- a/eam/Src/Success.fx.yaml
+++ b/eam/Src/Success.fx.yaml
@@ -4,21 +4,42 @@ Success As screen:
 
     Label2 As label:
         Align: =Align.Center
+        Color: =RGBA(102, 113, 166, 1)
         FontWeight: =FontWeight.Bold
-        Height: =108
+        Height: =55
         Size: =30
         Text: ="Thank you for coming !"
-        Width: =1338
-        X: =15
-        Y: =330
+        Width: =468
+        X: =436
+        Y: =446
         ZIndex: =1
 
     Label16 As label:
         Align: =Align.Center
-        Height: =78
+        Height: =60
         Size: =30
         Text: ="Global Power Platform Bootcamp 2024 Ahmedabad"
-        Width: =1353
-        Y: =516
+        Width: =980
+        X: =180
+        Y: =536
         ZIndex: =2
+
+    Image2 As image:
+        BorderColor: =RGBA(209, 232, 178, 1)
+        Height: =151
+        Image: =excellence
+        Width: =189
+        X: =575
+        Y: =263
+        ZIndex: =3
+
+    Timer2 As timer:
+        AutoPause: =false
+        AutoStart: =true
+        Duration: =8000
+        OnTimerEnd: =Navigate(Splash,ScreenTransition.Fade)
+        Visible: =false
+        X: =40
+        Y: =40
+        ZIndex: =4
 
