--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -2,50 +2,6 @@ Dashboard As screen:
     BackgroundImage: ='milad-fakurian-GJKx5lhwU3M-unsplash (1)'
     ImagePosition: =ImagePosition.Fill
 
-    Label20 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="Email Id"
-        X: =494
-        Y: =242
-        ZIndex: =1
-
-    Label21 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="Professions"
-        X: =676
-        Y: =242
-        ZIndex: =2
-
-    Label23 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="Organization"
-        Width: =147
-        X: =842
-        Y: =242
-        ZIndex: =3
-
-    Gallery1 As gallery.galleryVertical:
-        DelayItemLoading: =true
-        Fill: =RGBA(237, 237, 237, 1)
-        Height: =67
-        Items: ='Event Attendees Management'
-        Layout: =Layout.Vertical
-        LoadingSpinner: =LoadingSpinner.Data
-        TemplateSize: =62
-        Width: =1366
-        Y: =215
-        ZIndex: =4
-
-        Label5 As label:
-            Height: =7
-            OnSelect: =Select(Parent)
-            Text: =ThisItem.Title
-            X: =184
-            ZIndex: =1
-
     Gallery2 As gallery.galleryVertical:
         DelayItemLoading: =true
         Fill: =RGBA(255, 255, 255, 1)
@@ -55,13 +11,13 @@ Dashboard As screen:
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =If(Self.Layout = Layout.Horizontal, Min(280, Self.Width - 60), Min(280, Self.Height - 60))
         Width: =1366
-        ZIndex: =5
+        ZIndex: =2
 
     Image3 As image:
         Height: =111
         Image: ='photo_2024-02-05_12-17-19-transformed'
         Width: =194
-        ZIndex: =6
+        ZIndex: =3
 
     Label3 As label:
         Color: =RGBA(56, 96, 178, 1)
@@ -72,7 +28,7 @@ Dashboard As screen:
         Underline: =true
         Width: =868
         X: =230
-        ZIndex: =7
+        ZIndex: =4
 
     Label4 As label:
         FontWeight: =FontWeight.Semibold
@@ -81,14 +37,14 @@ Dashboard As screen:
         Text: ="Powered by "
         Width: =100
         X: =1098
-        ZIndex: =8
+        ZIndex: =5
 
     Image3_1 As image:
         Height: =111
         Image: ='photo_2024-02-05_12-17-19-transformed'
         Width: =156
         X: =1210
-        ZIndex: =9
+        ZIndex: =6
 
     txt_SearchLargeData As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -104,7 +60,7 @@ Dashboard As screen:
         Width: =414
         X: =14
         Y: =124
-        ZIndex: =10
+        ZIndex: =7
 
     Icon2 As icon.Search:
         Color: =RGBA(179, 179, 179, 1)
@@ -113,7 +69,7 @@ Dashboard As screen:
         Width: =45
         X: =383
         Y: =133
-        ZIndex: =11
+        ZIndex: =8
 
     TextInput1_1 As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -128,7 +84,7 @@ Dashboard As screen:
         Width: =211
         X: =449
         Y: =124
-        ZIndex: =12
+        ZIndex: =9
 
     TextInput1_2 As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -143,7 +99,7 @@ Dashboard As screen:
         Width: =211
         X: =682
         Y: =124
-        ZIndex: =13
+        ZIndex: =10
 
     TextInput1_3 As text:
         BorderColor: =RGBA(237, 237, 237, 1)
@@ -158,7 +114,7 @@ Dashboard As screen:
         Width: =211
         X: =915
         Y: =124
-        ZIndex: =14
+        ZIndex: =11
 
     Button1 As button:
         Height: =57
@@ -168,7 +124,7 @@ Dashboard As screen:
         Width: =211
         X: =1142
         Y: =124
-        ZIndex: =15
+        ZIndex: =12
 
     RecordGallery As gallery.galleryVertical:
         DelayItemLoading: =true
@@ -179,7 +135,7 @@ Dashboard As screen:
         TemplateSize: =110
         Width: =1366
         Y: =264
-        ZIndex: =16
+        ZIndex: =13
 
         Label6 As label:
             OnSelect: =Select(Parent)
@@ -251,48 +207,6 @@ Dashboard As screen:
             Y: =31
             ZIndex: =9
 
-    Label10 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="FName"
-        X: =44
-        Y: =244
-        ZIndex: =30
-
-    Label17 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="LName"
-        X: =164
-        Y: =242
-        ZIndex: =31
-
-    Label18 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="Contact Number"
-        Width: =184
-        X: =278
-        Y: =242
-        ZIndex: =32
-
-    Label24 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="Job Title"
-        X: =1020
-        Y: =242
-        ZIndex: =33
-
-    Label25 As label:
-        FontWeight: =FontWeight.Bold
-        Size: =15
-        Text: ="Action"
-        Width: =137
-        X: =1216
-        Y: =242
-        ZIndex: =34
-
     grpsuccess As group:
         Height: =5
         Width: =5
@@ -307,7 +221,7 @@ Dashboard As screen:
             Width: =561
             X: =419
             Y: =295
-            ZIndex: =17
+            ZIndex: =14
 
         Label15 As label:
             Align: =Align.Center
@@ -321,7 +235,7 @@ Dashboard As screen:
             Width: =576
             X: =404
             Y: =295
-            ZIndex: =18
+            ZIndex: =15
 
         Label19 As label:
             Align: =Align.Center
@@ -333,7 +247,7 @@ Dashboard As screen:
             Width: =552
             X: =412
             Y: =561
-            ZIndex: =19
+            ZIndex: =16
 
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
@@ -342,7 +256,7 @@ Dashboard As screen:
             Width: =50
             X: =930
             Y: =295
-            ZIndex: =20
+            ZIndex: =17
 
         HtmlText3 As htmlViewer:
             Height: =473
@@ -352,7 +266,7 @@ Dashboard As screen:
             Width: =585
             X: =404
             Y: =295
-            ZIndex: =21
+            ZIndex: =18
 
         Icon4 As icon.Heart:
             Color: =RGBA(219, 219, 219, 1)
@@ -362,7 +276,100 @@ Dashboard As screen:
             Width: =134
             X: =622
             Y: =439
-            ZIndex: =22
+            ZIndex: =19
+
+    HeaderGroup As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =35
+
+        Gallery1 As gallery.galleryVertical:
+            DelayItemLoading: =true
+            Fill: =RGBA(237, 237, 237, 1)
+            Height: =67
+            Items: ='Event Attendees Management'
+            Layout: =Layout.Vertical
+            LoadingSpinner: =LoadingSpinner.Data
+            TemplateSize: =62
+            Width: =1366
+            Y: =215
+            ZIndex: =1
+
+            Label5 As label:
+                Height: =7
+                OnSelect: =Select(Parent)
+                Text: =ThisItem.Title
+                X: =184
+                ZIndex: =1
+
+        Label10 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="FName"
+            X: =44
+            Y: =244
+            ZIndex: =27
+
+        Label17 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="LName"
+            X: =164
+            Y: =242
+            ZIndex: =28
+
+        Label18 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="Contact Number"
+            Width: =184
+            X: =278
+            Y: =242
+            ZIndex: =29
+
+        Label24 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="Job Title"
+            X: =1020
+            Y: =242
+            ZIndex: =30
+
+        Label25 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="Action"
+            Width: =137
+            X: =1216
+            Y: =242
+            ZIndex: =31
+
+        Label23 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="Organization"
+            Width: =147
+            X: =842
+            Y: =242
+            ZIndex: =32
+
+        Label21 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="Professions"
+            X: =676
+            Y: =242
+            ZIndex: =33
+
+        Label20 As label:
+            FontWeight: =FontWeight.Bold
+            Size: =15
+            Text: ="Email Id"
+            X: =494
+            Y: =242
+            ZIndex: =34
 
     Regform As group:
         Height: =5
@@ -380,7 +387,7 @@ Dashboard As screen:
             Width: =527
             X: =462
             Y: =181
-            ZIndex: =23
+            ZIndex: =20
 
         Rectangle2 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
@@ -389,7 +396,7 @@ Dashboard As screen:
             Width: =527
             X: =462
             Y: =181
-            ZIndex: =24
+            ZIndex: =21
 
         Form1 As form:
             DataSource: ='Event Attendees Management'
@@ -398,7 +405,7 @@ Dashboard As screen:
             Width: =521
             X: =468
             Y: =244
-            ZIndex: =25
+            ZIndex: =22
 
             "'First Name_DataCard1' As typedDataCard.textualEditCard":
                 BorderStyle: =BorderStyle.Solid
@@ -938,7 +945,7 @@ Dashboard As screen:
             Visible: =_ShowRegform
             X: =657
             Y: =728
-            ZIndex: =26
+            ZIndex: =23
 
         Rectangle5 As rectangle:
             Height: =82
@@ -946,7 +953,7 @@ Dashboard As screen:
             Width: =523
             X: =462
             Y: =133
-            ZIndex: =27
+            ZIndex: =24
 
         Label22 As label:
             Align: =Align.Center
@@ -960,7 +967,7 @@ Dashboard As screen:
             Width: =519
             X: =462
             Y: =143
-            ZIndex: =28
+            ZIndex: =25
 
         Icon1 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
@@ -970,5 +977,5 @@ Dashboard As screen:
             Visible: =_ShowRegform
             X: =921
             Y: =139
-            ZIndex: =29
+            ZIndex: =26
 
