--- a/eam/Src/Splash.fx.yaml
+++ b/eam/Src/Splash.fx.yaml
@@ -3,11 +3,11 @@ Splash As screen:
     ImagePosition: =ImagePosition.Fill
 
     Image1 As image:
-        Height: =204
+        Height: =151
         Image: ='photo_2024-02-05_12-17-19-transformed'
-        Width: =547
-        X: =435
-        Y: =264
+        Width: =434
+        X: =484
+        Y: =409
         ZIndex: =1
 
     Timer1 As timer:
@@ -28,7 +28,15 @@ Splash As screen:
         Size: =36
         Text: ="Global Power Platform Bootcamp 2024 Ahmedabad"
         Width: =1143
-        X: =137
-        Y: =468
+        X: =118
+        Y: =560
         ZIndex: =3
+
+    Image4 As image:
+        Height: =150
+        Image: ='event-management'
+        Width: =139
+        X: =631
+        Y: =259
+        ZIndex: =4
 
