--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -53,6 +53,8 @@ Dashboard As screen:
         DelayOutput: =true
         Height: =57
         HintText: ="Search"
+        OnChange: |
+            =Set(searchQuery, txt_SearchLargeData.Text)
         PaddingLeft: =40
         RadiusBottomLeft: =10
         RadiusBottomRight: =10
@@ -67,8 +69,9 @@ Dashboard As screen:
         Color: =RGBA(179, 179, 179, 1)
         Height: =38
         Icon: =Icon.Search
-        Width: =45
-        X: =383
+        OnSelect: =Set(searchQuery, txt_SearchLargeData.Text)
+        Width: =38
+        X: =381
         Y: =133
         ZIndex: =11
 
