--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -223,7 +223,7 @@ Dashboard As screen:
         Icon5 As icon.CheckBadge:
             Height: =38
             Icon: =Icon.CheckBadge
-            OnSelect: =Select(Parent)
+            OnSelect: =Navigate(Regform);
             Width: =43
             X: =1229
             Y: =28
