--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -39,13 +39,15 @@ Dashboard As screen:
 
     Label3 As label:
         Color: =RGBA(56, 96, 178, 1)
-        FontWeight: =FontWeight.Bold
-        Height: =111
-        Size: =25
+        Font: =Font.Georgia
+        FontWeight: =FontWeight.Lighter
+        Height: =35
+        Size: =26
         Text: ="Global Power Platform Bootcamp 2024 Ahmedabad"
         Underline: =true
-        Width: =868
-        X: =230
+        Width: =826
+        X: =228
+        Y: =38
         ZIndex: =9
 
     Label4 As label:
