--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -225,7 +225,11 @@ Dashboard As screen:
         Icon5 As icon.CheckBadge:
             Height: =38
             Icon: =Icon.CheckBadge
-            OnSelect: =Navigate(Regform,ScreenTransition.Fade)
+            OnSelect: |
+                =Navigate(
+                    Button1,
+                    ScreenTransition.Fade
+                );
             Width: =43
             X: =1229
             Y: =28
