--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -227,7 +227,7 @@ Dashboard As screen:
             Icon: =Icon.CheckBadge
             OnSelect: |
                 =Navigate(
-                    Button1,
+                    Form1,
                     ScreenTransition.Fade
                 );
             Width: =43
