--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -70,14 +70,15 @@ Dashboard As screen:
         Size: =15
         Text: ="Powered by "
         Width: =100
-        X: =1098
+        X: =1169
         ZIndex: =10
 
     Image3_1 As image:
-        Height: =111
-        Image: ='photo_2024-02-05_12-17-19-transformed'
-        Width: =156
-        X: =1210
+        Height: =73
+        Image: =schedule
+        Width: =120
+        X: =1246
+        Y: =19
         ZIndex: =11
 
     txt_SearchLargeData As text:
