--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -288,7 +288,7 @@ Dashboard As screen:
         Rectangle3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =442
-            Visible: =Thankyoupopup
+            Visible: =varThankyoupopup
             Width: =561
             X: =419
             Y: =295
@@ -302,7 +302,7 @@ Dashboard As screen:
             Height: =64
             Size: =25
             Text: ="Thank you"
-            Visible: =Thankyoupopup
+            Visible: =varThankyoupopup
             Width: =576
             X: =404
             Y: =295
@@ -314,7 +314,7 @@ Dashboard As screen:
             Height: =80
             Size: =25
             Text: ="Thank you for attendees event."
-            Visible: =Thankyoupopup
+            Visible: =varThankyoupopup
             Width: =552
             X: =412
             Y: =561
@@ -323,7 +323,7 @@ Dashboard As screen:
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            Visible: =Thankyoupopup
+            Visible: =varThankyoupopup
             Width: =50
             X: =930
             Y: =295
@@ -333,7 +333,7 @@ Dashboard As screen:
             Height: =473
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
-            Visible: =Thankyoupopup
+            Visible: =varThankyoupopup
             Width: =585
             X: =395
             Y: =295
@@ -343,7 +343,7 @@ Dashboard As screen:
             Color: =RGBA(219, 219, 219, 1)
             Height: =122
             Icon: =Icon.Heart
-            Visible: =Thankyoupopup
+            Visible: =varThankyoupopup
             Width: =134
             X: =622
             Y: =439
