--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -288,6 +288,8 @@ Dashboard As screen:
         Rectangle3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =442
+            OnSelect: =
+            Visible: =false
             Width: =561
             X: =419
             Y: =295
@@ -299,8 +301,10 @@ Dashboard As screen:
             Fill: =RGBA(119, 123, 125, 1)
             FontWeight: =FontWeight.Bold
             Height: =64
+            OnSelect: =
             Size: =25
             Text: ="Thank you"
+            Visible: =false
             Width: =561
             X: =419
             Y: =295
@@ -310,8 +314,10 @@ Dashboard As screen:
             Align: =Align.Center
             Font: =Font.Georgia
             Height: =80
+            OnSelect: =
             Size: =25
             Text: ="Thank you for attendees event."
+            Visible: =false
             Width: =552
             X: =412
             Y: =561
@@ -320,8 +326,8 @@ Dashboard As screen:
         Icon3 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            OnSelect: |-
-                =UpdateContext({_varThankyoupopup:false})
+            OnSelect: =
+            Visible: =false
             Width: =50
             X: =930
             Y: =295
@@ -331,6 +337,8 @@ Dashboard As screen:
             Height: =473
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
+            OnSelect: =
+            Visible: =false
             Width: =585
             X: =395
             Y: =295
@@ -340,6 +348,8 @@ Dashboard As screen:
             Color: =RGBA(219, 219, 219, 1)
             Height: =122
             Icon: =Icon.Heart
+            OnSelect: =
+            Visible: =false
             Width: =134
             X: =622
             Y: =439
