--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -289,7 +289,7 @@ Dashboard As screen:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =442
             OnSelect: =
-            Visible: =varThankyoupopup
+            Visible: =false
             Width: =561
             X: =419
             Y: =295
@@ -304,7 +304,7 @@ Dashboard As screen:
             OnSelect: =
             Size: =25
             Text: ="Thank you"
-            Visible: =varThankyoupopup
+            Visible: =false
             Width: =561
             X: =419
             Y: =295
@@ -317,7 +317,7 @@ Dashboard As screen:
             OnSelect: =
             Size: =25
             Text: ="Thank you for attendees event."
-            Visible: =varThankyoupopup
+            Visible: =false
             Width: =552
             X: =412
             Y: =561
@@ -327,7 +327,7 @@ Dashboard As screen:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
             OnSelect: =
-            Visible: =varThankyoupopup
+            Visible: =false
             Width: =50
             X: =930
             Y: =295
@@ -338,7 +338,7 @@ Dashboard As screen:
             HtmlText: |-
                 ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
             OnSelect: =
-            Visible: =varThankyoupopup
+            Visible: =false
             Width: =585
             X: =395
             Y: =295
@@ -349,7 +349,7 @@ Dashboard As screen:
             Height: =122
             Icon: =Icon.Heart
             OnSelect: =
-            Visible: =varThankyoupopup
+            Visible: =false
             Width: =134
             X: =622
             Y: =439
