--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -545,7 +545,7 @@ Dashboard As screen:
             Height: =587
             HtmlText: |-
                 ="<div style='margin: 12px 10px 8px 10px; width: 1335px; height: 48px; background- color: white; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); border-radius:5px'> </div>"
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             Width: =527
             X: =462
             Y: =181
@@ -554,7 +554,7 @@ Dashboard As screen:
         Rectangle2 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =587
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             Width: =527
             X: =462
             Y: =181
@@ -563,7 +563,7 @@ Dashboard As screen:
         Form1 As form:
             DataSource: ='Event Attendees Management'
             Height: =524
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             Width: =521
             X: =468
             Y: =244
@@ -1111,14 +1111,14 @@ Dashboard As screen:
                 Set(varRegistrationform,false);
                 Set(varThankyoupopup,true);
             Text: ="Submit"
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             X: =657
             Y: =728
             ZIndex: =28
 
         Rectangle5 As rectangle:
             Height: =82
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             Width: =523
             X: =462
             Y: =133
@@ -1132,7 +1132,7 @@ Dashboard As screen:
             Height: =72
             Size: =25
             Text: ="Registration Form"
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             Width: =519
             X: =462
             Y: =143
@@ -1143,7 +1143,7 @@ Dashboard As screen:
             Icon: =Icon.Cancel
             OnSelect: |-
                 =UpdateContext({_ShowRegform:false})
-            Visible: =_ShowRegform
+            Visible: =varRegistrationform
             X: =921
             Y: =139
             ZIndex: =31
