--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -278,77 +278,6 @@ Dashboard As screen:
             Y: =24
             ZIndex: =11
 
-    Thankyoupopup As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =34
-
-        Rectangle3 As rectangle:
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =442
-            Visible: =varThankyoupopup
-            Width: =561
-            X: =419
-            Y: =295
-            ZIndex: =19
-
-        Label15 As label:
-            Align: =Align.Center
-            Color: =RGBA(255, 255, 255, 1)
-            Fill: =RGBA(119, 123, 125, 1)
-            FontWeight: =FontWeight.Bold
-            Height: =64
-            Size: =25
-            Text: ="Thank you"
-            Visible: =varThankyoupopup
-            Width: =561
-            X: =419
-            Y: =295
-            ZIndex: =20
-
-        Label19 As label:
-            Align: =Align.Center
-            Font: =Font.Georgia
-            Height: =80
-            Size: =25
-            Text: ="Thank you for attendees event."
-            Visible: =varThankyoupopup
-            Width: =552
-            X: =412
-            Y: =561
-            ZIndex: =21
-
-        Icon3 As icon.Cancel:
-            Color: =RGBA(255, 255, 255, 1)
-            Icon: =Icon.Cancel
-            Visible: =varThankyoupopup
-            Width: =50
-            X: =930
-            Y: =295
-            ZIndex: =22
-
-        HtmlText3 As htmlViewer:
-            Height: =473
-            HtmlText: |-
-                ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
-            Visible: =varThankyoupopup
-            Width: =585
-            X: =395
-            Y: =295
-            ZIndex: =23
-
-        Icon4 As icon.Heart:
-            Color: =RGBA(219, 219, 219, 1)
-            Height: =122
-            Icon: =Icon.Heart
-            Visible: =varThankyoupopup
-            Width: =134
-            X: =622
-            Y: =439
-            ZIndex: =24
-
     HeaderGroup As group:
         Height: =5
         Width: =5
@@ -532,6 +461,86 @@ Dashboard As screen:
         X: =216
         Y: =226
         ZIndex: =40
+
+    Thankyoupopup As group:
+        Height: =5
+        Width: =5
+        X: =60
+        Y: =60
+        ZIndex: =42
+
+        Rectangle3 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =442
+            Visible: =varThankyoupopup
+            Width: =561
+            X: =419
+            Y: =295
+            ZIndex: =19
+
+        Label15 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Fill: =RGBA(119, 123, 125, 1)
+            FontWeight: =FontWeight.Bold
+            Height: =64
+            Size: =25
+            Text: ="Thank you"
+            Visible: =varThankyoupopup
+            Width: =561
+            X: =419
+            Y: =295
+            ZIndex: =20
+
+        Label19 As label:
+            Align: =Align.Center
+            Font: =Font.Georgia
+            Height: =80
+            Size: =25
+            Text: ="Thank you for attendees event."
+            Visible: =varThankyoupopup
+            Width: =552
+            X: =412
+            Y: =561
+            ZIndex: =21
+
+        Icon3 As icon.Cancel:
+            Color: =RGBA(255, 255, 255, 1)
+            Icon: =Icon.Cancel
+            Visible: =varThankyoupopup
+            Width: =50
+            X: =930
+            Y: =295
+            ZIndex: =22
+
+        HtmlText3 As htmlViewer:
+            Height: =473
+            HtmlText: |-
+                ="<div style='padding: 300px; font size: 25px; color: white; box-shadow:5px 5px 8px #999; clip-path: inset(0px -15px 0px -15px); position: relative; margin: 0 50px; background: linear-gradient(90dg, springgreen, #90EE90);'<center></center> </div>"
+            Visible: =varThankyoupopup
+            Width: =585
+            X: =395
+            Y: =295
+            ZIndex: =23
+
+        Icon4 As icon.Heart:
+            Color: =RGBA(219, 219, 219, 1)
+            Height: =122
+            Icon: =Icon.Heart
+            Visible: =varThankyoupopup
+            Width: =134
+            X: =622
+            Y: =439
+            ZIndex: =24
+
+        Timer3 As timer:
+            AutoPause: =false
+            AutoStart: =true
+            Duration: =8000
+            Fill: =RGBA(0, 0, 0, 0)
+            X: =609
+            Y: =675
+            ZIndex: =41
 
     Registrationform As group:
         Height: =5
