--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -158,7 +158,7 @@ Dashboard As screen:
     Button1 As button:
         Height: =57
         OnSelect: |-
-            =NewForm(Form1);UpdateContext({VarRegistrationform:true})
+            =NewForm(Form1);UpdateContext({Registrationform:true})
         Text: ="Register Now"
         Width: =211
         X: =1142
