--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -158,7 +158,8 @@ Dashboard As screen:
     Button1 As button:
         Height: =57
         OnSelect: |-
-            =NewForm(Form1);UpdateContext({_ShowRegistrationform:true});
+            =NewForm(Form1);
+            //UpdateContext({_ShowRegistrationform:true});
         Text: ="Register Now"
         Width: =211
         X: =1142
