--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -157,9 +157,7 @@ Dashboard As screen:
 
     Button1 As button:
         Height: =57
-        OnSelect: |-
-            =NewForm(Form1);
-            //UpdateContext({_ShowRegistrationform:true});
+        OnSelect: =NewForm(Form1);
         Text: ="Register Now"
         Width: =211
         X: =1142
