--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -157,7 +157,9 @@ Dashboard As screen:
 
     Button1 As button:
         Height: =57
-        OnSelect: =NewForm(Form1);
+        OnSelect: |-
+            =NewForm(Form1);
+            Set(varRegistrationform,true);
         Text: ="Register Now"
         Width: =211
         X: =1142
