--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -1152,7 +1152,7 @@ Dashboard As screen:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
             OnSelect: |-
-                =UpdateContext({_ShowRegistrationform:false})
+                =UpdateContext({_ShowvarRegistrationform:false})
             Visible: =varRegistrationform
             X: =921
             Y: =139
