--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -539,6 +539,7 @@ Dashboard As screen:
             AutoStart: =true
             Duration: =8000
             Fill: =RGBA(0, 0, 0, 0)
+            OnTimerEnd: =Navigate(Success,ScreenTransition.Fade)
             Visible: =false
             X: =609
             Y: =675
