--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -1171,8 +1171,9 @@ Dashboard As screen:
         Icon1 As icon.Cancel:
             Color: =RGBA(255, 255, 255, 1)
             Icon: =Icon.Cancel
-            OnSelect: |
-                =Set(toggle_popup, false)
+            OnSelect: |+
+                =
+                
             Visible: |+
                 =varRegistrationform
                 
