--- a/eam/CanvasManifest.json
+++ b/eam/CanvasManifest.json
@@ -117,7 +117,7 @@
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Event%2BAttendees%2BManagement%2BApp.msapp",
+    "Name": "Event Attendees Management App",
     "OriginatingVersion": "1.336",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
