--- a/eam/Src/Dashboard.fx.yaml
+++ b/eam/Src/Dashboard.fx.yaml
@@ -273,9 +273,13 @@ Dashboard As screen:
             Color: =RGBA(61, 83, 252, 1)
             Height: =36
             Icon: =Icon.View
-            OnSelect: |+
-                =Set(varEventAttendeesManagement, ThisItem);
-                
+            OnSelect: |
+                =Set(
+                    varEventAttendeesManagement,
+                    ThisItem
+                );
+                ViewForm(Form1);
+                Navigate('Form1');
             Width: =35
             X: =1289
             Y: =24
